<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KitKat4TAUG</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="swp_title1">Root accessible path</string>
    <string name="swp_title2">Folder content</string>
    <string name="newsensors_title1">Geomagnetic rotation vector</string>
    <string name="newsensors_title2">Step counter</string>
    <string name="newsensors_title3">Step detector</string>
    <string name="accuracy">Accuracy :</string>
    <string name="values">Values :</string>
    <string name="write_sms">Write SMS</string>
    <string name="receiver">Receiver :</string>
    <string name="message">Message :</string>
    <string name="root_elements_sms">SMS</string>
    <string name="send_manager">Send manager</string>
    <string name="send_api">Send API</string>
    <string name="default_message">Je suis en train de tester l\'application du Toulouse Android User Group. Renseigne toi sur http://toulouseaug.blogspot.com</string>
    <string name="no_app_to_handle">No app to handle this intent.</string>
    <string name="which_element_hidden">Select which elements are hidden</string>
    <string name="element_system_ui">System UI</string>
    <string name="element_system_ui_with_navigation">System UI With Navigation</string>
    <string name="element_navigation_ui">Navigation UI</string>
    <string name="element_navigation_ui_with_immersive">Navigation UI with immersive</string>
    <string name="element_default">Default</string>

</resources>